Fix: drag and scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,23 @@
 @import 'rc-dialog/assets/index.css';
 @import './custom.css';
 
+@font-face {
+  font-family: 'iconfont';  /* project id 1442814 */
+  src: url('//at.alicdn.com/t/font_1442814_wc0k5yriyfp.eot');
+  src: url('//at.alicdn.com/t/font_1442814_wc0k5yriyfp.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1442814_wc0k5yriyfp.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1442814_wc0k5yriyfp.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1442814_wc0k5yriyfp.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1442814_wc0k5yriyfp.svg#iconfont') format('svg');
+}
+
 html { height: 100% }
 
 body {
   position: relative;
   overflow: hidden;
   top: 80px;
+  user-select: none;
   height: 516px;
   color: var(--text-color-0);
   filter: drop-shadow(2px 4px 4px #00000037);
@@ -112,6 +123,7 @@ img {
   width: 100%;
   padding: 20px;
   transition: .7s;
+  -webkit-app-region: no-drag;
   overflow-x: hidden;
 }
 
@@ -226,8 +238,11 @@ img {
   z-index: 1061;
   position: fixed;
   width: 300px;
-  pointer-events: auto;
   transition: .8s;
+}
+#top-logo img {
+  max-width: 100%;
+  max-height: 100%;
 }
 #top-logo:hover {
   filter: drop-shadow(2px 4px 6px #0000008e);
